@@ -38,7 +38,10 @@ Pcaml.add_option "-help_seq" (Arg.Unit help_sequences)
   "    Print explanations about new sequences and exit.";
 
 do {
+  let odfa = Plexer.dollar_for_antiquotation.val in
+  Plexer.dollar_for_antiquotation.val := False;
   Grammar.Unsafe.reinit_gram gram (Plexer.make ());
+  Plexer.dollar_for_antiquotation.val := odfa;
   Grammar.Unsafe.clear_entry interf;
   Grammar.Unsafe.clear_entry implem;
   Grammar.Unsafe.clear_entry top_phrase;
